<resources>
    <string name="app_name">Sub D</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_exists">exists</string>
    <string name="title_window">window</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_line_entry">LineEntryActivity</string>
    <string name="title_activity_posm_entry">PosmEntryActivity</string>
    <string name="title_brand">Brand</string>
    <string name="title_Quantity">Quantity</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="title_Posm">POSM</string>
    <string name="title_No_of_Sku_Line">No of Billed SKU Line</string>
    <string name="title_Total_Line_Available">Total Line Available</string>
    <string name="title_Total_Bill_Amount">Total Billed Amount</string>
    <string name="title_activity_secondary_window">SecondaryWindowActivity</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="title_activity_my_attendance">MyAttendanceActivity</string>

</resources>
