<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_line_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.deepakp.gskgtsubd.dailyentry.LineEntryActivity"
    tools:showIn="@layout/activity_line_entry">


<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:id="@+id/totalline_txt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/title_Total_Line_Available"/>

            <EditText
                android:id="@+id/edt_totallineAvailable"
                android:layout_width="0dp"
                android:inputType="number"
                android:maxLength="7"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:weightSum="2"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/title_No_of_Sku_Line"/>

            <EditText
                android:id="@+id/edt_noofskuline"
                android:layout_width="0dp"
                android:inputType="number"
                android:maxLength="7"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/title_Total_Bill_Amount"/>

            <EditText
                android:id="@+id/edt_totalbillamount"
                android:layout_width="0dp"
                android:inputType="numberDecimal"
                android:maxLength="7"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>


</RelativeLayout>
